Composer: Body from mailto: URI not enclosed in paragraphs
I use plain text mode in emails and often want to use the preformatted text mode for long lines when pasting code or reporting bugs.
When I run the following command to create a long line in the composer from the command-line, switching to the preformatted mode does not reformat the text all on the same long line.
xdg-email --body $(printf -- '-%.0s' $(seq 1 300))
Sometimes when I then cut & paste to a text editor like gedit and cut & paste back to the composer, preformatted mode works again.
This is a regression in evolution 3.38.
I use GNOME 3.38, Evolution 3.38.1-2 and WebKit 2.30.3-1 on Debian bullseye.
Edited by Milan Crha