I#1259 - Composer: Body from mailto: URI not enclosed in paragraphs

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1259